@@ -104,6 +104,7 @@
 			<li>issue #11 <span class="blankShouldBeBlank"></span></li>
 			<li>issue #13 <span class="floatToCommaDecimal">33195.5</span></li>
 			<li>issue #15 <span class="formatCurrencyWithBlankSymbol">1,234.56</span></li>
+			<li>issue #19 <span class="formatCurrencyWithNegOneHundredth">-.01</span></li>
 		</ol>
 		
 		<h4>default (English - US)</h4>
